[workspace]
resolver = "3"
members = ["liberato-addressing","liberato-core-cli", "liberato-protocols-core", "libnamespace-pivot", "muscarine-auth", "muscarine-bootstrap", "muscarine-fileio", "muscarine-types", "muscarine-vrf-chain","shrine-network", "shrine-raft"]

[package]
name = "libshrindo"
version = "0.1.0"
edition = "2024"

[dependencies]
