[workspace]
resolver = "3"
members = ["digital-asset-standard-liberato","liberato-address-scheme", "liberato-protocols-core", "muscarine-auth", "muscarine-bootstrap", "muscarine-fileio", "muscarine-types", "muscarine-vrf-chain", "openaddress-scheme-rs","shrine-network", "shrine-raft", "shrine-ui"]

[package]
name = "libshrindo"
version = "0.1.0"
edition = "2024"

[dependencies]
