[package]
name = "liberato-address-scheme"
version = "0.1.0"
authors = ["silene","WeSpeakInCursive.xyz","0x20CB","SundialSource"]
description = "The Rust Implementation of the Decentralized Addressing Scheme for Liberato-Address-Scheme"
categories = ["cryptography"]
keywords = ["liberato","decentralization","web3","address","cryptography"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/sileneundula/LiberatoNetwork-rs/"
homepage = "https://wespeakincursive.xyz"
edition = "2024"

[dependencies]
# silene/openinternetcryptographykeys
openinternetcryptographykeys = "0.2.0"

# Serialization
serde = {version="1.0.0", features=["derive"]}
fixedstr = {version="0.5.10", features=["serde"]}
serde_yaml = "0.9.34"
serde_json = "1.0"
bincode = "1.3.3"
pem = "3.0.6"

blake2-rfc = "0.2.17"