[package]
name = "shrine-network"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = {version = "0.56.0", features=["full"]}
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.8.5"
librustysigs = "0.2.0"
# Serialization
serde = {version = "1.0.0", features=["derive"]}
serde_yaml = "0.9.34"

# Zeroization
zeroize = "1.8.2"

# logging
log = "0.4.29"
pretty_env_logger = "0.5.0"
tracing = "0.1.43"

# Errors
thiserror = "2.0.17"

uuid = "1.19.0"

blake2-rfc = "0.2.18"

slugencode = "0.1.0"

dotenvy = "0.15.7"

multiaddr = "0.18.2"

futures = "0.3.28"

async-std = { version = "1.12.0", features = ["attributes"] }

async-trait = "0.1.68"

# gRPC
tonic = "0.14.2"

# Domain
domain = "0.11.1"

url = "2.5.7"

toml = "0.9.9"

fixedstr = "0.5.10"